--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,6 +12,7 @@
 @import './features/hide-scrollbars.css';
 @import './features/hide-url-thumb.css';
 @import './features/no-col-icns.css';
+@import './features/no-bg-modal.css';
 @import './features/no-play-btn.css';
 @import './features/round-pic.css';
 @import './features/show-verified.css';
