--- a/src/css/features/flash-tweets.css
+++ b/src/css/features/flash-tweets.css
@@ -3,15 +3,12 @@
 	to { background-color: rgba(54, 82, 122, 0); }
 }
 
-.btd__flash_tweets {
+.btd__flash-mentions :matches(.column-type-interactions, .column-type-mention) .js-chirp-container > article:first-of-type {
+    animation-duration: 2s;
+    animation-name: tweetEnter;
+}
 
-	&.btd__flash-mentions :matches(.column-type-interactions, .column-type-mention) .js-chirp-container > article:first-of-type {
-	    animation-duration: 2s;
-	    animation-name: tweetEnter;
-	}
-
-	&.btd__flash-all [class*="column-type"] .js-chirp-container > article:first-of-type {
-	   animation-duration: 2s;
-	   animation-name: tweetEnter;
-	}
+.btd__flash-all [class*="column-type"] .js-chirp-container > article:first-of-type {
+   animation-duration: 2s;
+   animation-name: tweetEnter;
 }
