options for slimmer scrollbars

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -17,6 +17,7 @@
 @import './features/round-pic.css';
 @import './features/show-verified.css';
 @import './features/small-icns.css';
+@import './features/slim_scrollbars.css';
 @import './features/username-typeahead.css';
 
 /* Emoji Panel */
