--- a/src/css/options/index.css
+++ b/src/css/options/index.css
@@ -160,7 +160,7 @@ body {
     label small,
     li small {
       margin-left: .4em;
-      color: #ccc;
+      color: #a0a0a0;
       font-size: 80%;
       font-style: normal;
 
