:art: add a black-to-transparent gradient behind "no bg" modals

--- a/src/css/features/no-bg-modal.css
+++ b/src/css/features/no-bg-modal.css
@@ -59,5 +59,6 @@
 }
 
 .btd__no_bg_modal :matches(.ovl, .overlay) {
-  background: color(black a(80%));
+  background-color: color(black a(80%));
+  background-image: linear-gradient(transparent, black);
 }
