:bug: fix size of gfycat embeds
Fixes #84

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -132,3 +132,7 @@
 .is-retweet.is-favorite .tweet-dogear {
   background-position: -200px -10px
 }
+
+div.youtube-player:matches(.-gfycat) {
+  min-width: 700px;
+}
