--- a/src/css/features/slim_scrollbars.css
+++ b/src/css/features/slim_scrollbars.css
@@ -1,13 +1,13 @@
-.btd__slim_scrollbars :matches(.js-app-columns-container, .js-column-scroller) {
-  .scroll-styled-v::-webkit-scrollbar {
+.btd__slim_scrollbars {
+  .js-column-scroller.scroll-styled-v::-webkit-scrollbar {
     width: 3px;
   }
 
-  .scroll-styled-h::-webkit-scrollbar {
+  .js-app-columns-container.scroll-styled-h::-webkit-scrollbar {
     height: 3px;
   }
 
-  .needs-scroll-bottom-offset.scroll-styled-h {
-    bottom: 3px;
+  .js-app-columns-container.needs-scroll-bottom-offset.scroll-styled-h {
+    bottom: 0;
   }
 }
