--- a/src/css/theme-dark.css
+++ b/src/css/theme-dark.css
@@ -69,6 +69,14 @@
     box-shadow: -4px 0 3px #222426;
   }
 
+  .scroll-conversation {
+    background: color(#292F33 saturation(0%));
+  }
+
+  .account-bio {
+    color: color(#8899a6 saturation(0%));
+  }
+
   .attach-compose-buttons .tweet-button {
     background-color: var(--compose-btn-bg-dark-hover);
   }
