--- a/src/css/features/collapse-dms.css
+++ b/src/css/features/collapse-dms.css
@@ -2,9 +2,15 @@
   display: none !important;
 }
 
-.btd__collapse_dms .tweet-message .tweet-avatar {
-  width: 24px;
-  height: 24px;
+.btd__collapse_dms .tweet-message .tweet-avatar,
+.btd__collapse_dms .tweet-message .tweet-img {
+  width: 24px !important;
+  height: 24px !important;
+}
+
+.btd__collapse_dms .tweet-message .tweet-img.btd-is-verified:before {
+  transform: scale(.8);
+  bottom: -8px !important;
 }
   
 .btd__collapse_dms .is-unread .tweet-message .l-table {
