:art: :sparkles: align username with avatar

--- a/src/css/features/collapse-dms.css
+++ b/src/css/features/collapse-dms.css
@@ -27,6 +27,14 @@
   line-height: 1.6em; 	
 }
 
+.btd__collapse_dms .tweet-message .nbfc .account-link {
+  margin-top: 3px;
+}
+
+.btd__collapse_dms .tweet-message .tweet-timestamp {
+  margin-top: 3px;
+}
+
 .btd__collapse_dms .tweet-message .tweet-text {
   margin-left: -24px;	
 }
