--- a/src/css/features/show-verified.css
+++ b/src/css/features/show-verified.css
@@ -56,6 +56,7 @@
   bottom: auto;
 }
 
-.btd__show_verified .stream-item .sprite-verified-mini {
+.btd__show_verified .stream-item .sprite-verified-mini,
+.btd__show_verified .tweet .sprite-verified-mini {
   display: none;
 }
