:art: force zoom-in cursor

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -101,7 +101,7 @@
 
 .js-media-image-link,
 article video.js-media-gif {
-  cursor: zoom-in;
+  cursor: zoom-in !important;
 }
 
 .noembed-embed-inner > div,
