GIFs preview and download (+ fixes) (#133)
* :cookie: working preview of gifs :tada:

* :bug: fix the auto-resize of modals

* :bug:

* proof-of-concept for GIF download

* :scissors: remove useless code

* :wrench: :construction:

* :construction: comment gif preview code for now

* :wrench: use the generic method to get chirp in _BTDinspectChirp

* :shirt:

* :wrench: :scissors: :racehorse: use a common method to retrieve chirps from columns

* :wrench: improve the preview gif code

* :package: bump version

* :cookie: working preview of gifs :tada:

* :bug: fix the auto-resize of modals

* :bug:

* proof-of-concept for GIF download

* :scissors: remove useless code

* :wrench: :construction:

* :construction: comment gif preview code for now

* :wrench: use the generic method to get chirp in _BTDinspectChirp

* :shirt:

* :wrench: :scissors: :racehorse: use a common method to retrieve chirps from columns

* :wrench: improve the preview gif code

* :package: bump version

* :package: :bug: add file-saver and gitshot to deps

* :art: force zoom-in cursor

* :bulb: look into .targetTweet fields when looking for a chirp

* :wrench: look into .targetTweet when possible to try to find playing GIF upon inserted tweet in columns

* :wrench: avoid fetching bandcamp if URLs are not for an album or a track

* :bug: fix giphy provider with recent changes of JSON model

* :wrench: use debug method to throw errors

* :bulb: allow a debug flag on window

* :sparkles: improve feedback when download a gif

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -99,8 +99,9 @@
   background-image: url('../emojis/emoji-happy.svg');
 }
 
-.js-media-image-link {
-  cursor: zoom-in;
+.js-media-image-link,
+article video.js-media-gif {
+  cursor: zoom-in !important;
 }
 
 .noembed-embed-inner > div,
