:cookie: add a badge to show thumbnails' source

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -21,6 +21,7 @@
 @import './features/slim_scrollbars.css';
 @import './features/username-typeahead.css';
 @import './features/stars.css';
+@import './features/show-provider-name.css';
 
 /* Emoji Panel */
 @import './emoji-panel.css';
