--- a/src/css/index.css
+++ b/src/css/index.css
@@ -22,6 +22,7 @@
 @import './features/username-typeahead.css';
 @import './features/stars.css';
 @import './features/show-provider-name.css';
+@import './features/hide-like-rt-indicators.css';
 
 /* Emoji Panel */
 @import './emoji-panel.css';
