--- a/src/css/features/show-verified.css
+++ b/src/css/features/show-verified.css
@@ -10,12 +10,12 @@
     line-height: 1;
     position: absolute;
     bottom: -5px;
-    right: -5px;
+    right: 0;
     color: #55acee;
     width: 1em;
     height: 1em;
     font-size: 20px;
-    z-index: 1;
+    z-index: 9;
 
     background-image: radial-gradient(circle 11px, white 50%, color(white a(0)) 51%);
   }
