:bug: fix embeds for more providers

--- a/src/css/embeds.css
+++ b/src/css/embeds.css
@@ -54,6 +54,11 @@
 
 [data-btd-provider="gyazo"],
 [data-btd-provider="bandcamp"],
+[data-btd-provider="ted"],
+[data-btd-provider="vimeo"],
+[data-btd-provider="dailymotion"],
+[data-btd-provider="youtube"],
+[data-btd-provider="imgur"],
 [data-btd-provider="spotify"] {
   .btd-embed-container.-video {
     align-items: center;
