::before for CSS3 pseudo-element
https://developer.mozilla.org/en-US/docs/Web/CSS/::before

--- a/src/css/emoji-panel.css
+++ b/src/css/emoji-panel.css
@@ -36,7 +36,7 @@
   padding: 10px;
 }
 
-.emoji-popover .category-chooser:before {
+.emoji-popover .category-chooser::before {
   content: '';
   position: absolute;
   width: 100%;
