:bug: fix the verified icon

--- a/src/css/features/show-verified.css
+++ b/src/css/features/show-verified.css
@@ -2,7 +2,7 @@
   position: absolute;
 
   &::before {
-    content: "\f02a";
+    content: "\f099";
     font-family: "tweetdeckregular";
     font-weight: normal;
     font-style: normal;
