--- a/src/css/index.css
+++ b/src/css/index.css
@@ -92,11 +92,8 @@
   }
 }
 
-[data-btdtheme] .btd-poll-icon {
-  background-image: url('../icons/poll.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center center;
+[data-btdtheme] .btd-poll-icon::before {
+  content: "\f199";
 }
 
 [data-btdtheme] .btd-has-poll .tweet-detail .media-badge {
@@ -111,8 +108,8 @@
   bottom: 260px !important;
 }
 
-.js-add-emojis .btd-emoji-icon {
-  background-image: url('../emojis/emoji-happy.svg');
+.js-add-emojis .btd-emoji-icon::before {
+  content: "\f438";
 }
 
 .js-media-image-link,
