--- a/src/css/index.css
+++ b/src/css/index.css
@@ -167,3 +167,7 @@ body :matches(.tweet-avatar, .prf-img, .avatar, .compose-account) {
   overflow: hidden;
   clip: rect(1px, 1px, 1px, 1px);
 }
+
+[data-action-id^="btd-banner"] {
+  background-color: color(black alpha(30%)) !important;
+}
