:cookie: Add feature to use system fonts

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -21,6 +21,7 @@
 @import './features/slim_scrollbars.css';
 @import './features/username-typeahead.css';
 @import './features/stars.css';
+@import './features/system-fonts.css';
 @import './features/show-provider-name.css';
 @import './features/hide-like-rt-indicators.css';
 
