Improve `btd-settings-btn` CSS integration
Make it more compatible with the application' nav.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -97,12 +97,12 @@
   display: none;
 }
 
-.btd-settings-btn .icon {
-  color: #009cf0;
+.column-navigator-overflow {
+  bottom: 267px !important;
 }
 
-.column-navigator-overflow {
-  bottom: 260px !important;
+.app-navigator .with-nav-border-t:not(:first-of-type)::before {
+  display: none;
 }
 
 .js-add-emojis .btd-emoji-icon::before {
