--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,7 +16,7 @@
 @import './features/no-bg-modal.css';
 @import './features/no-play-btn.css';
 @import './features/round-pic.css';
-@import './features/show-verified.css';
+@import './features/show-verified-redux.css';
 @import './features/small-icns.css';
 @import './features/slim_scrollbars.css';
 @import './features/username-typeahead.css';
