:cookie: :sparkles: add hashtag mute shortcuts to tweet actions

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -168,3 +168,16 @@ body :matches(.tweet-avatar, .prf-img, .avatar, .compose-account) {
 [data-action-id^="btd-banner"] {
   background-color: color(black alpha(30%)) !important;
 }
+
+.dropdown-menu .typeahead-item, .dropdown-menu [data-btd-action] {
+    display: block;
+    padding: 5px 20px;
+    color: #292F33;
+    text-shadow: none;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.dropdown-menu .is-selected [data-btd-action] {
+  color: #fff;
+}
