--- a/src/css/features/system-fonts.css
+++ b/src/css/features/system-fonts.css
@@ -1,3 +1,7 @@
 .btd__system_fonts {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+  
+  .is-inverted-dark {
+    font-family: inherit;
+  }
 }
