:bug: make emojis bigger only in tweets

--- a/src/css/features/bigger-emojis.css
+++ b/src/css/features/bigger-emojis.css
@@ -1,5 +1,5 @@
 .btd__bigger_emojis {
-  .emoji {
+  p > .emoji {
     width: 1.3em !important;
     height: 1.3em !important;
     padding: .2em .05em 0 .1em !important;
