:bug: don't hide verified badges inside quoted tweets and "activities target" tweets

--- a/src/css/features/show-verified-redux.css
+++ b/src/css/features/show-verified-redux.css
@@ -54,7 +54,7 @@ General style setup
 }
 
 /* Hide the vanilla verified badge in columns */
-.btd__show_verified .stream-item .sprite-verified-mini,
-.btd__show_verified .tweet .sprite-verified-mini {
+.btd__show_verified .stream-item .js-tweet:not(.txt-mute) > header .sprite-verified-mini {
   display: none;
 }
+
