--- a/src/css/features/system-fonts.css
+++ b/src/css/features/system-fonts.css
@@ -1,5 +1,5 @@
 .btd__system_fonts {
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   
   .is-inverted-dark {
     font-family: inherit;
