--- a/src/css/options/index.css
+++ b/src/css/options/index.css
@@ -261,3 +261,12 @@ button.plain-button {
     opacity: .8;
   }
 }
+
+@keyframes flashSetting {
+	from { background-color: rgba(255, 255, 0, 0.7); }
+	to { background-color: rgba(255, 255, 0, 0); }
+}
+
+.flash-setting {
+  animation: 2s flashSetting linear;
+}
