--- a/src/css/index.css
+++ b/src/css/index.css
@@ -189,3 +189,12 @@ body :matches(.tweet-avatar, .prf-img, .avatar, .compose-account) {
 .tweet-detail .js-media.btd-media-thumbnail ~ .js-card-container {
   display: none;
 }
+
+.icon-download:before {
+  content: "\F186";
+}
+
+.tweet-detail-actions.tweet-detail-actions {
+  display: flex;
+  padding-bottom: 8px;
+}
