--- a/src/css/index.css
+++ b/src/css/index.css
@@ -198,3 +198,8 @@ body :matches(.tweet-avatar, .prf-img, .avatar, .compose-account) {
   display: flex;
   padding-bottom: 8px;
 }
+
+.quoted-tweet .js-reply-info-container,
+.tweet-body > div > .other-replies {
+  display: none;
+}
