:scissors: get ride of the hotfixes.css file

--- a/src/css/theme-dark.css
+++ b/src/css/theme-dark.css
@@ -23,9 +23,9 @@
     }
   }
 
-  .dropdown-menu li > *,
+  .dropdown-menu li > a,
   .typeahead.lst :matches(.fullname, .username, p) {
-    color: color(#8899a6 saturation(0%));
+    color: color(#8899a6 saturation(0%)) !important;
   }
 
   .typeahead.lst :matches(.fullname, .username, p) {
