Bring back old replies (#196)
* :construction: basic version of The True Old Replies™

* :racehorse: trigger the "ready" event sooner from inject.js

* :racehorse: trigger the 'settingsReady' event sooner

* :racehorse: more reliable/fast way to stop the vanilla refreshing of timestamps

* :cookie: the old_reply feature actually work now

* :bug: fix duplicated mention issue

* :wrench:

* :wrench:

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -198,3 +198,10 @@ body :matches(.tweet-avatar, .prf-img, .avatar, .compose-account) {
   display: flex;
   padding-bottom: 8px;
 }
+
+.btd__old_replies {
+  .quoted-tweet .js-reply-info-container,
+  .tweet-body > div > .other-replies {
+    display: none;
+  }  
+}
