--- a/src/css/index.css
+++ b/src/css/index.css
@@ -201,7 +201,8 @@ body :matches(.tweet-avatar, .prf-img, .avatar, .compose-account) {
 
 .btd__old_replies {
   .quoted-tweet .js-reply-info-container,
-  .tweet-body > div > .other-replies {
+  .tweet-body > div > .other-replies,
+  .tweet-detail > div > .other-replies {
     display: none;
   }  
 }
