minor fixes to the emojo panel

--- a/src/css/emoji-panel.css
+++ b/src/css/emoji-panel.css
@@ -79,6 +79,10 @@
   margin: 5px;
 }
 
+.emoji-popover .btd-skin-tone + .btd-skin-tone {
+  margin-left: 0;
+}
+
 .emoji-popover .btd-skin-tone {
   border-radius: 10px;
 }
