:bug: fix color of the @username in dropdown in dark minimal theme

--- a/src/css/theme-dark.css
+++ b/src/css/theme-dark.css
@@ -24,6 +24,7 @@
   }
 
   .dropdown-menu li > a,
+  .dropdown-menu li > b,
   .typeahead.lst :matches(.fullname, .username, p) {
     color: color(#8899a6 saturation(0%)) !important;
   }
