--- a/src/css/index.css
+++ b/src/css/index.css
@@ -187,6 +187,33 @@ body :matches(.tweet-avatar, .prf-img, .avatar, .compose-account) {
   content: "\F186";
 }
 
+.btd-column-buttons-better {
+  /* move .column-header-link styles to here */
+  float: right;
+  width: auto;
+  margin: 0px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  bottom: -1px;
+  padding: 0 4px;
+}
+
+.btd-column-buttons-better li {
+  /* undo the .column-header-link styles for the children */
+  position: relative !important;
+  margin: 0 !important;
+  float: left !important;
+}
+
+.btd-column-buttons-better li a.column-header-link {
+  margin: 0 !important;
+  top: 0px !important;
+  right: 0px !important;
+  position: inherit !important;
+  display: block !important;
+}
+
 .tweet-detail-actions.tweet-detail-actions {
   display: flex;
   padding-bottom: 8px;
